<resources>
    <string name="app_name">Beber Água</string>
    <string name="edt_peso">Seu Peso (kg)</string>
    <string name="edt_idade">Sua Idade</string>
    <string name="btn_calcular">Calcular Ingestão Diária</string>
    <string name="btn_lembrete">Lembrete</string>
    <string name="btn_alarme">Alarme</string>
    <string name="txt_hour">00</string>
    <string name="txt_break">:</string>
    <string name="txt_minute">00</string>
    <string name="toast_informe_peso">Informe seu peso!</string>
    <string name="toast_informe_idade">Informe sua idade!</string>
    <string name="dialog_titulo">Redefinir dados</string>
    <string name="dialog_descricao">Deseja excluir todos os dados existentes?</string>
    <string name="alarme_mensagem">Hora de beber água!</string>
    <string name="alarme_mensagem_erro">Configure a hora no formato 24!</string>
</resources>