<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
                                       xmlns:tools="http://schemas.android.com/tools"
                                       android:layout_width="match_parent"
                                       android:layout_height="match_parent"
                                       android:fillViewport="true"
                                       xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <View
                android:id="@+id/container_header"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/container_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"  />

        <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:src="@drawable/bebaagua"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="@id/container_header"
                app:layout_constraintStart_toStartOf="@id/container_header"/>

        <ImageView
                android:id="@+id/ic_refresh"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="92dp"
                android:src="@drawable/ic_refresh"
                app:layout_constraintEnd_toEndOf="@id/container_header"
                app:layout_constraintTop_toTopOf="@id/container_header" />

        <ImageView
                android:id="@+id/ic_finish"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginTop="28dp"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="@id/container_header"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/ic_refresh"
                app:layout_constraintTop_toTopOf="@id/container_header" />

        <EditText
                android:id="@+id/edt_peso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/edt_peso"
                android:textColorHint="@android:color/holo_blue_dark"
                android:padding="15dp"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:inputType="numberDecimal"
                android:maxLength="7"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/container_header"
                app:layout_constraintStart_toStartOf="parent" />

        <EditText
                android:id="@+id/edt_idade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/edt_idade"
                android:textColorHint="@android:color/holo_blue_dark"
                android:padding="15dp"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:inputType="number"
                android:maxLength="3"
                android:gravity="center"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/container_header"
                app:layout_constraintStart_toEndOf="@id/edt_peso"
                app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_calcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/btn_calcular"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="15dp"
                android:background="@drawable/bg_degrade_button"
                app:layout_constraintTop_toBottomOf="@id/edt_peso"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <View
                android:id="@+id/container_result_ml"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/container_result_ml"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                app:layout_constraintTop_toBottomOf="@id/btn_calcular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView
                android:id="@+id/txt_resultado_ml"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="35sp"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/container_result_ml"
                app:layout_constraintStart_toStartOf="@id/container_result_ml"
                app:layout_constraintEnd_toEndOf="@id/container_result_ml"
                app:layout_constraintBottom_toBottomOf="@id/container_result_ml"
        />

        <Button
                android:id="@+id/btn_lembrete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_lembrete"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/container_result_ml"
                app:layout_constraintStart_toStartOf="parent" />

        <Button
                android:id="@+id/btn_alarme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_alarme"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/container_result_ml"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/txt_hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_hour"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="160dp"
                app:layout_constraintTop_toBottomOf="@id/btn_lembrete"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/txt_break"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_break"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toBottomOf="@id/btn_lembrete"
                app:layout_constraintStart_toEndOf="@id/txt_hora" />

        <TextView
                android:id="@+id/txt_minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_minute"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toBottomOf="@id/btn_lembrete"
                app:layout_constraintStart_toEndOf="@id/txt_break" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>